# Frameworkf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  generate.bat  imgui.ini
Framework/: CMakeLists.txt
Framework/Frameworkf/: CMakeLists.txt
Framework/Frameworkf/src/: framework.cpp
Framework/Kernelf/: CMakeLists.txt
Framework/Kernelf/src/: pch.h
Framework/Kernelf/src/Core/: log.cpp  log.h  profile.h  timers.cpp  timers.h  types.h
Framework/Kernelf/src/EventSystem/: event.h  keyboardEvent.h  mouseEvent.h  windowEvent.h
Framework/Kernelf/src/FileSystem/: file.h
Framework/Kernelf/src/Platform/: input.cpp  input.h  platform.cpp  platform.h  window.cpp  window.h
Framework/Renderf2D/: CMakeLists.txt
Framework/Renderf2D/src/: graphicsContext.cpp  graphicsContext.h  renderer.cpp  renderer.h
Framework/Renderf2D/src/Buffer/: buffer.cpp  buffer.h  vertexBuffer.cpp  vertexBuffer.h
Framework/Renderf2D/src/Camera/: camera.cpp  camera.h
Framework/Renderf2D/src/Framebuffer/: framebuffer.cpp  framebuffer.h
Framework/Renderf2D/src/OpenGL/: graphicsContextOGL.cpp  graphicsContextOGL.h  indexBufferOGL.cpp  indexBufferOGL.h  openGLUtils.h  shaderProgramOGL.cpp  shaderProgramOGL.h  textureOGL.cpp  textureOGL.h  vertexBufferOGL.cpp  vertexBufferOGL.h
Framework/Renderf2D/src/Shader/: shaderProgram.cpp  shaderProgram.h
Framework/Renderf2D/src/Texture/: texture.cpp  texture.h
Framework/Renderf2D/src/UI/: uiContext.cpp  uiContext.h
Framework/Shaders/: CMakeLists.txt  testFS.glsl  testVS.glsl
Framework/src/: enumButton.h  enumKey.h  framework.cpp  framework.h
Framework/src/Core/: log.cpp  log.h
Framework/src/EventSystem/: event.cpp  event.h  keyboardEvent.cpp  keyboardEvent.h  mouseEvent.cpp  mouseEvent.h  windowEvent.cpp  windowEvent.h
Framework/src/FileSystem/: file.cpp  file.h
Framework/src/Platform/: input.h  platform.cpp  platform.h  window.cpp  window.h
Testbed/: CMakeLists.txt
Testbed/src/: main.cpp
